# auto_related_warnings

./: .gitignore  README.md  manage.py  pyproject.toml  pytest.ini
auto_related_warnings/: settings.py  urls.py  wsgi.py
auto_related_warnings/users/: apps.py  models.py  serializers.py  tests.py  views.py
auto_related_warnings/users/migrations/: 0001_initial.py
